syntax = "proto3";
package pt.ulisboa.tecnico.tuplespaces.replicated.contract;


message PutRequest {
  string newTuple = 1;
}
message PutResponse {
  string ok = 1;
}

message ReadRequest {
  string searchPattern = 1;
}
message ReadResponse {
  string result = 1;
}

message LockRequest {
  int32 clientId = 1;
}
message LockResponse {
  bool granted = 1;
}

message UnlockRequest {
  int32 clientId = 1;
}
message UnlockResponse {}

message TakeRequest {
  int32 clientId = 1;
  string searchPattern = 2;
}
message TakeResponse {
  string result = 1;
}

message getTupleSpacesStateRequest {}
message getTupleSpacesStateResponse {
  repeated string tuple = 1;
}

service TupleSpaces {
  rpc put(PutRequest) returns (PutResponse);
  rpc read(ReadRequest) returns (ReadResponse);
  rpc take(TakeRequest) returns (TakeResponse);
  rpc getTupleSpacesState(getTupleSpacesStateRequest) returns (getTupleSpacesStateResponse);
  rpc requestLock(LockRequest) returns (LockResponse);
  rpc releaseLock(UnlockRequest) returns (UnlockResponse);
}
